<resources>
    <string name="app_name">My Food App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="explore_your_craving">explore your craving</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="register1">Register</string>
    <string name="email_address">Email Address</string>
    <string name="login1">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="welcome_to_foodmac">welcome to foodmac</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="full_name">Full Name</string>
    <string name="daily_meals">Daily Meals</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="hassan_raza">Hassan Raza</string>
    <string name="hassan_raza26_business_gmail_com">hassan.raza26.business@gmail.com</string>
    <string name="search_your_food">Search Your Food!</string>
    <string name="hi_hassan">Hi Hassan</string>
    <string name="what_do_you_want">What Do You Want?</string>
    <string name="pizza">Pizza</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="min_45">Min - $45</string>
    <string name="dinner">Dinner</string>
    <string name="discount">Discount</string>
    <string name="discription_discription_discription">Discription Discription Discription</string>
    <string name="description">Description</string>
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="weekend_delicious_ndinner_recepies">Weekend Delicious \nDinner Recepies</string>
    <string name="your_favourite_and_tasty_food_is_here">Your Favourite and Tasty Food Is Here</string>
    <string name="_10_weekend_delicious_ndinner_recepies">10 Weekend Delicious \nDinner Recepies</string>
    <string name="your_favourite_food_is_here">Your Favourite Food Is Here!</string>
    <string name="view_more">View More</string>
    <string name="make_order">Make Order</string>
    <string name="_180">$180</string>
    <string name="total">Total</string>
    <string name="my_cart1">My Cart</string>
    <string name="_180_">180</string>
    <string name="order_now">Order Now</string>
    <string name="food_image">food image</string>
</resources>