<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favourite.FavouriteFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView7"
          android:layout_width="match_parent"
          android:layout_height="240dp"
          android:foreground="@drawable/foreground_design"
          android:scaleType="centerCrop"
          android:src="@drawable/dinner"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />


       <TextView
           android:id="@+id/textview11"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:fontFamily="@font/lobster"
           android:text="@string/_10_weekend_delicious_ndinner_recepies"
           android:textColor="@color/white"
           android:textSize="25sp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="@+id/imageView7"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/imageView7"
           app:layout_constraintVertical_bias="0.7"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@color/white"
           android:padding="8dp"
           android:text="@string/view_more"
           android:textColor="@color/black"
           android:textSize="16sp"
           app:layout_constraintBottom_toBottomOf="@+id/imageView7"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_margin="8dp" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_marginStart="8dp"
           android:fontFamily="@font/lobster"
           android:text="@string/your_favourite_food_is_here"
           android:textColor="@color/white"
           app:layout_constraintBottom_toBottomOf="@+id/imageView7"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textview11" />

       <com.google.android.material.tabs.TabLayout
           android:id="@+id/tab_lay"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@+id/imageView7"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent" />
       
       <androidx.viewpager2.widget.ViewPager2
           android:id="@+id/ViewPager2"
           android:layout_width="match_parent"
           android:layout_height="450dp"
           app:layout_constraintTop_toBottomOf="@+id/tab_lay"
           app:layout_constraintBottom_toBottomOf="parent" />


   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>