<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/order_now"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/View"
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/purple_500"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/View">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/bottom_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp"
            android:contentDescription="@string/food_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bottom_name"
                android:fontFamily="@font/lobster"
                android:text="Name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:id="@+id/detailed_des"
                android:singleLine="true"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp" >

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/start"
                    android:layout_marginTop="2dp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.0"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/bottom_rating" />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_baseline_access_time_24"/>

                <TextView
                    android:id="@+id/bottom_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/_10_00_7_00" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/dollarsymbol"
                    app:tint="@color/purple_500"
                    app:layout_constraintBottom_toBottomOf="@+id/bottom_price"
                    app:layout_constraintTop_toTopOf="@+id/bottom_price"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/bottom_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120.0"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6" />

                <Button
                    android:id="@+id/add_to_cart"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lobster"
                    android:layout_marginRight="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>