<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/detailed_img"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:src="@drawable/coffe"
            android:scaleType="centerCrop"
            app:riv_corner_radius="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailed_name"
                android:fontFamily="@font/lobster"
                android:text="Name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:id="@+id/detailed_des"
                android:singleLine="true"
                android:text="@string/description"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp" >
                
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/start"
                    android:layout_marginTop="2dp" />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.0"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/detailed_rating" />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/ic_baseline_access_time_24"/>

                <TextView
                    android:id="@+id/detailed_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/_10_00_7_00" />
                
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/dollarsymbol"
                    app:tint="@color/purple_500"
                    app:layout_constraintBottom_toBottomOf="@+id/detailed_price"
                    app:layout_constraintTop_toTopOf="@+id/detailed_price"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120.0"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6" />

                <Button
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="false"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lobster"
                    android:layout_marginRight="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            
            
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>